checker/temp/206/error.log
source.cpp:1:1: error: 'kkkk' does not name a type
    1 | kkkk
      | ^~~~
